# orgplan

./: CLAUDE.md  LICENSE  PLAN.md  README.md  orgplan.config.example.json  pyproject.toml
.github/workflows/: ci.yml
commands/: evening-review.md  month-planning.md  monthly-retro.md  morning-review.md  week-planning.md  yearly-goals.md
docs/: architecture.md  config.md  format.md  plugins.md
examples/reference_plugin/: orgplan_plugin.py
orgplan/: __init__.py  __main__.py  api.py  cli.py  config.py  dates.py  markup.py  plugins.py  registry.py  tasks.py
tests/: test_config.py  test_file_task_store.py  test_markup.py  test_plugins.py  test_reference_plugin.py  test_tasks.py
